--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -35,3 +35,10 @@
 		{% for link in site.links %}<li>{% if link.external %}<a href="{{ link.url }}">{{ link.title }}</a>{% else %}<a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>{% endif %}</li>{% endfor %}
 	</ul><!-- /.dl-menu -->
 </nav><!-- /.dl-menuwrapper -->
+
+
+<nav class="lang-switch" role="navigation">
+  <a href="/">EN</a>
+  <a href="/tr">TR</a>
+</nav>
+      
